fix:visible logo in mobile

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -68,10 +68,11 @@ body {
 }
 
 .Nav-bar-content-holder {
-    margin-top: 0%;
+    margin-top: 0;
     text-decoration: none;
     display: block;
     text-align: center;
+    padding: 1rem;
 }
 
 .Nav-bar-holder-r {
@@ -81,16 +82,28 @@ body {
 .Nav-bar-icon {
     opacity: 0;
 }
+.Nav-bar-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
 
 @media only screen and (max-width: 600px) {
     .Home-Logo {
         height: 15vh;
     }
+    .Nav-bar-wrapper{
+        display: flex;
+        flex-direction: column;
+        background-color: var(--sec-clr);
+    }
     .Nav-bar {
         display: none;
         height: 100vh;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: space-between;
         position: sticky;
     }
 
